src/main/java/com/example/msc/patients/model/error/ErrorData.java
package com.example.msc.patients.model.error;

import com.fasterxml.jackson.annotation.JsonProperty;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class ErrorData {

    @JsonProperty(value = "data")
    private ResourceError error;
}
